--- a/src/Login.css
+++ b/src/Login.css
@@ -4,11 +4,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-decoration: none;
 }
 
 .login__logo {
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     object-fit: contain;
     width: 100px;
     margin-right: auto;
@@ -17,11 +18,12 @@
 
 .login__container {
     width: 300px;
+    margin-top: 10px;
     height: fit-content;
     display: flex;
     flex-direction: column;
     border-radius: 5px;
-    border: 1px solid lightgray;
+    border: 1px solid #3C4043;
     padding: 20px;
 }
 
@@ -47,13 +49,13 @@
 }
 
 .login__signInButton {
-    background: #f0c14b;
+    background: #e80988;
     border-radius: 2px;
     width: 100%;
     height: 30px;
     border: 1px solid;
     margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
+    border-color: ##e80988 ##e80988 #e80988;
   }
 
   .login__registerButton {
@@ -64,5 +66,7 @@
     margin-top: 10px;
     border-color: darkgray;
   }
-  
-  
+  .ReSeLL{
+    color: #e80988;
+    text-decoration: none;
+  }
