--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -5,15 +5,16 @@
 }
 
 .checkoutProduct__info {
-    padding-left: 20px
+    padding-left: 20px;
 }
 
 .checkoutProduct__info > button {
-    background: #f0c14b;
+    background: #e80988;
     border: 1px solid;
     margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
-    color: #111;
+    border-color: #e80988 #e80988 #e80988;
+    color: white;
+    position:block;
 }
 
 .checkoutProduct__image {
