--- a/src/Header.css
+++ b/src/Header.css
@@ -2,17 +2,18 @@
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: #131921;
+  background-color: #3C4043;
   position: sticky;
   top: 0;
   z-index: 100;
 }
 
 .header__logo {
-  width: 100px;
+  width: 50px;
   object-fit: contain;
-  margin: 0 20px;
-  margin-top: 18px;
+  margin-left: 5px;
+  margin-right: 10px;
+  margin-top: 5px;
 }
 
 .header__search {
@@ -25,6 +26,7 @@
 .header__searchInput {
   height: 12px;
   padding: 10px;
+  margin-left: 950px;
   border: none;
   width: 100%;
 }
@@ -32,7 +34,7 @@
 .header__searchIcon {
   padding: 5px;
   height: 22px !important;
-  background-color: #cd9042;
+  background-color: #e80988;
 }
 
 .header__optionLineOne {
@@ -47,7 +49,7 @@
 .header__optionBasket {
   display: flex;
   align-items: center;
-  color: white;
+  color: black;
 }
 
 .header__basketCount {
