--- a/src/Payment.css
+++ b/src/Payment.css
@@ -39,13 +39,13 @@
 
 
   .payment__details > form > div > button {
-    background: #f0c14b;
+    background: #e80988;
     border-radius: 2px;
     width: 100%;
     height: 30px;
     border: 1px solid;
     font-weight: bolder;
     margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
+    border-color: #e80988 #e80988 #e80988;
     color: #111;
   }
