--- a/src/Product.css
+++ b/src/Product.css
@@ -8,7 +8,7 @@
   width: 100%;
   max-height: 400px;
   min-width: 100px;
-  background-color: white;
+  background-color: #3C4043;
   z-index: 1;
 }
 
@@ -24,11 +24,11 @@
 }
 
 .product > button {
-  background: #f0c14b;
+  background: #e80988;
   border: 1px solid;
   margin-top: 10px;
-  border-color: #a88734 #9c7e31 #846a29;
-  color: #111;
+  border-color: #e80988 #e80988 #e80988;
+  color: white;
 }
 
 .product__price {
