--- a/src/Subtotal.css
+++ b/src/Subtotal.css
@@ -8,6 +8,7 @@
   background-color: #f3f3f3;
   border: 1px solid #dddddd;
   border-radius: 3px;
+  margin-left:46.25rem;
 }
 
 .subtotal__gift {
@@ -20,12 +21,12 @@
 }
 
 .subtotal > button {
-  background: #f0c14b;
+  background: #e80988;
   border-radius: 2px;
   width: 100%;
   height: 30px;
   border: 1px solid;
   margin-top: 10px;
-  border-color: #a88734 #9c7e31 #846a29;
+  border-color: #e80988 #e80988 #e80988;
   color: #111;
 }
